fix overflow on x coords

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -8,7 +8,7 @@ body {
     background: var(--background-one);
     color: var(--color);
     font-family: --font;
-    
+    overflow-x: hidden;
 }
 
 .mainWrapper > .content,
